--- a/server/Pipfile
+++ b/server/Pipfile
@@ -9,6 +9,7 @@ flask-sqlalchemy = "*"
 flask-migrate = "*"
 flask-jwt-extended = "*"
 flask-cors = "*"
+sqlalchemy-serializer = "*"
 
 [dev-packages]
 
