--- a/server/Pipfile
+++ b/server/Pipfile
@@ -10,6 +10,8 @@ flask-migrate = "*"
 flask-jwt-extended = "*"
 flask-cors = "*"
 sqlalchemy-serializer = "*"
+psycopg2-binary = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
