--- a/server/Pipfile
+++ b/server/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 django-cors-headers = "*"
 python-dotenv = "*"
 djangorestframework = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
